Issue #1 -- Refactored CSS & introduced `overflow: auto;` for `mathjax-box`

--- a/webed/static/webed-ext/resources/theme/webed.css
+++ b/webed/static/webed-ext/resources/theme/webed.css
@@ -498,4 +498,23 @@ body {
         !important;
 }
 
+/******************************************************************************
+ * MathJax: Formula Preview
+ *****************************************************************************/
+
+.mathjax-box {
+    height: 100%;
+    overflow: auto;
+    width: 100%;
+}
+
+.mathjax-box table {
+    height: 100%;
+    width: 100%;
+}
+
+.mathjax-box table tr td {
+    text-align: center;
+}
+
 /*****************************************************************************/
